src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));

  border-radius: 25px;

  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

.mask {
  height: auto;
  width: 100%;
  -webkit-mask-image: linear-gradient(black, transparent);
  mask-image: linear-gradient(black, transparent);
}

.maskSeries {
  height: auto;
  width: 100%;
  -webkit-mask-image: linear-gradient(black, transparent 100%);
  mask-image: linear-gradient(black, transparent 160%);
}

.maskModal {
  height: auto;
  -webkit-mask-image: linear-gradient(black, transparent 100%);
  mask-image: linear-gradient(black, transparent 160%);
}

.maskSkeletonMovie {
  -webkit-mask-image: linear-gradient(black, transparent 100%);
  mask-image: linear-gradient(black, transparent 160%);
}

.custom-scrollbar::-webkit-scrollbar {
  width: 0.5rem;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: black;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: rgb(234 179 8);
  border-radius: 8px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #555;
}

.scroll-left {
  scroll-snap-type: x mandatory;
  scroll-snap-align: start;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

